# Backend/Api/Models/Persons/UpdateRoles.cs
@@ -1,0 +1,8 @@
+namespace Api.Models.Persons;
+
+public class UpdateRoles
+{
+    public long PersonId { get; set; }
+
+    public List<UserType> Roles { get; set; } = [];
+}
